# gz_ws

./: .gitmodules  README.md  important.txt  mav.parm
src/asv_wave_sim/.github/workflows/: macos13-ventura-build-tools.yml
src/asv_wave_sim/gz-waves-models/models/drone_1/: model.config  model.sdf
src/asv_wave_sim/gz-waves-models/models/drone_2/: model.sdf
src/asv_wave_sim/gz-waves-models/models/wow_craft/: model.config  model.sdf
src/asv_wave_sim/gz-waves-models/models/wow_craft/meshes/: 100.stl
src/asv_wave_sim/gz-waves-models/worlds/: waves.sdf
src/water_drones/: package.xml  setup.cfg  setup.py
src/water_drones/data/: adjusted.csv  drone_position.csv  drone_positions_corrected.csv  in2.csv  out.csv
src/water_drones/launch/: bridge_launch.py  controller_launch.py  full_simulation_launch.py  launch_wo_bridge.py  sim_launch.py
src/water_drones/models/drone_1/: model.config  model1.sdf
src/water_drones/models/drone_2/: model.config  model1.sdf
src/water_drones/models/ground_plane/: model.config  model1.sdf
src/water_drones/scripts/: animation.py  control_drones.py  exit_plan.py  trajectory optimization  trajectory_optimization.py
src/water_drones/water_drones/: csv_publisher.py  csv_to_ros.py  drone_client.py  drone_state_updater.py  exit_plan.py  imu_pose_to_odometry.py  motor_controller.py  pose_to_gz.py  test.py  timed_pursuit_node.py
src/water_drones/worlds/: 2d_world.sdf  new_world.sdf  world.config  world_simple.sdf
