<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>water_drones</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sfrech@todo.todo">sfrech</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies-->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-pandas</exec_depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ros_gz</depend>
  
  <!-- Test dependencies-->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>